Refactored with CustomThemeFilter.

--- a/SparkDynamicTheme/App_Data/100/index.html
+++ b/SparkDynamicTheme/App_Data/100/index.html
@@ -3,7 +3,16 @@
 <head>
     <EngineHeader/>
 
-    <EngineHeader/>
+	<EngineHeaderBottom/>
+	<style>
+		body {
+			background-color: burlywood;
+		}
+		h1 {
+			font-family: verdana;
+			font-size: 2em;
+		}
+	</style>
 </head>
 <body>
     <h1>Not a special customer, but happy nonetheless</h1>
