--- a/SparkDynamicTheme/App_Data/200/index.html
+++ b/SparkDynamicTheme/App_Data/200/index.html
@@ -3,7 +3,17 @@
 <head>
     <EngineHeader/>
 
-    <EngineHeader/>
+	<EngineHeaderBottom/>
+	<style>
+		body {
+			background-color: lemonchiffon;
+		}
+		h1 {
+			font-family: tahoma;
+			font-size: 3em;
+			color: cornflowerblue;
+		}
+	</style>
 </head>
 <body>
     <h1>Super-special customer</h1>
